// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input default should render Input 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  box-sizing: border-box;
  border: 1px solid #8C8C8C;
  font: inherit;
  color: currentColor;
  width: 100%;
  height: 3em;
  margin: 0;
  padding: 6px 12px 7px;
}

.c0:focus {
  border-color: red;
  border: 2px solid #0086FF;
  padding: 5px 11px 6px;
  box-shadow: none !important;
  outline: 0;
}

<input
  className="c0"
/>
`;

exports[`Input error should render Input with error state 1`] = `
.c0 {
  position: relative;
  border-radius: 4px;
  box-sizing: border-box;
  border: 2px solid #FF253A;
  font: inherit;
  color: currentColor;
  width: 100%;
  height: 3em;
  margin: 0;
  padding: 5px 11px 6px;
}

.c0:focus {
  border-color: red;
  border: 2px solid #FF253A;
  padding: 5px 11px 6px;
  box-shadow: none !important;
  outline: 0;
}

<input
  className="c0"
/>
`;
